# qbs

./: .travis.yml  CMakeLists.txt  azure-pipelines.yml  docker-compose.yml
.github/actions/download-qt/: action.yml
.github/workflows/: main.yml
ci/: BuildDocsJob.qbs  BuildQbsJob.qbs  Export.qbs  InstallQtStep.qbs  Job.qbs  Pipeline.qbs  Stage.qbs  Stages.qbs  Step.qbs  TestJob.qbs  ci-utils.js  pipeline.qbs  travis-linux-stages.yml  travis-macos-stages.yml  travis-windows-stages.yml
ci/modules/ci/: GenericCi.qbs  travis.qbs
docker/bionic/: test-android.Dockerfile
docker/focal/: Dockerfile
scripts/: address-sanitizer-suppressions.txt  build-qbs-with-qbs.sh  run-analyzer.sh  scripts.qbs  test-qt-for-android.sh
share/qbs/modules/cli/: CLIModule.qbs  cli.js
share/qbs/modules/cpp/: GenericGCC.qbs  cosmic.js  cosmic.qbs  dmc.js  dmc.qbs  gcc.js  iar.js  iar.qbs  keil.js  keil.qbs  sdcc.js  sdcc.qbs
share/qbs/modules/freedesktop/: FreeDesktop.qbs
share/qbs/modules/java/: JavaModule.qbs
share/qbs/modules/nsis/: NSISModule.qbs
src/app/qbs/: entitlements.plist
src/lib/: libs.qbs
src/lib/corelib/: CMakeLists.txt  corelib.pro  corelib.qbs
src/lib/corelib/api/: internaljobs.cpp  runenvironment.cpp
src/lib/corelib/language/: evaluator.h  (+19 more)
src/shared/bundledqt/: bundledqt.qbs
tests/auto/api/: tst_api.cpp
tests/auto/blackbox/: tst_blackbox.cpp  tst_blackbox.h  tst_blackboxandroid.cpp
tests/auto/blackbox/testdata/cxx-modules/import-std/: CMakeLists.txt  import-std.qbs
tests/auto/language/: CMakeLists.txt  language.pro  language.qbs  tst_language.cpp
(+87 files in other folders)
